--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^6.2.2",
     "react-scripts": "2.1.3",
     "tabler": "^1.0.0-alpha.8",
+    "tabler-react": "^1.30.1",
     "truffle": "5.0.5",
     "typescript": "^4.6.2",
     "web3": "^1.7.1"
