--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "eth-marketplace",
+  "name": "csc2512_food_supply",
   "version": "0.1.0",
-  "description": "An Ethereum Marketplace",
-  "author": "gregory@dappuniversity.com",
+  "description": "A community food supply chain",
+  "author": "Roy_Aarjav_Sophia",
   "dependencies": {
     "babel-polyfill": "6.26.0",
     "babel-preset-env": "1.7.0",
@@ -15,8 +15,10 @@
     "chai-as-promised": "7.1.1",
     "chai-bignumber": "3.0.0",
     "react": "^17.0.2",
+    "react-archer": "^3.3.0",
     "react-bootstrap": "1.0.0-beta.5",
     "react-dom": "16.8.4",
+    "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.2",
     "react-scripts": "2.1.3",
     "tabler": "^1.0.0-alpha.8",
@@ -26,7 +28,7 @@
     "web3": "^1.7.1"
   },
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start ",
+    "start": "react-scripts start ",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
