--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "web3": "^1.7.1"
   },
   "scripts": {
-    "start": "react-scripts start ",
+    "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
